--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,6 +9,13 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+MBDyn 1.X-Devel
+	Enhancements:
+		- added screw joint (Mauro Manetti & Marco Morandini)
+	Backward compatibility issues:
+	Known issues:
+	Bug fixes:
+
 MBDyn 1.7.0
 	Enhancements:
 		- (optional) new handling of math expressions and
