--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -15,6 +15,8 @@ MBDyn 1.X-Devel
 	Backward compatibility issues:
 	Known issues:
 	Bug fixes:
+		- fixed structural forces in inverse dynamics
+		  (Andrea Zanoni, noted by Davide Ivone)
 		- fixed off-by-one bug in socket stream drive
 		- fixed invalid memory access bug in viscoelastic
 		  displacement joint Jacobian matrix initial assembly
