--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -24,6 +24,7 @@ MBDyn 1.X-Devel
 		  (Reinhard Resch); assembly still needs work
 		- fixed bug in EasyAnim post-processing of total joints
 		- fixed bug in strain gage priv data (noted by Jason)
+		- fixed EOF handling on arm
 
 MBDyn 1.7.0
 	Enhancements:
